Bug 1628784 - Pass TOPSRCDIR environment variable to jsapi-tests, in order to read test files. r=Yoric

Differential Revision: https://phabricator.services.mozilla.com/D71255